# statistics_cheat_sheets_book

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_1.md  genindex.html  intro.html  intro_old.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-book.yml
_sources/notebooks/: 2_1_basic_terminology.ipynb  foundations_of_statistics_notebook.ipynb  setting_up_environment.ipynb
book/: _config.yml  _toc.yml  intro.md
book/_build/.doctrees/: environment.pickle  intro.doctree  intro_old.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
book/_build/.doctrees/notebooks/: 1_1_introduction.doctree  1_2_setting_up_environment.doctree  1_getting_started.doctree  2_1_basic_terminology.doctree  2_foundations_of_statistics.doctree  foundations_of_statistics_notebook.doctree  introduction.doctree  markdown_examples.doctree  setting_up_environment.doctree
book/_build/html/: .buildinfo  genindex.html  intro.html  intro_old.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
book/_build/html/_sources/: markdown-notebooks.md
book/_build/html/_sources/notebooks/: 1_getting_started.ipynb  2_1_basic_terminology.ipynb  2_foundations_of_statistics.ipynb  markdown_examples.ipynb  setting_up_environment.ipynb
book/_build/html/notebooks/: 1_1_introduction.html  1_2_setting_up_environment.html  1_getting_started.html  2_1_basic_terminology.html  2_foundations_of_statistics.html  foundations_of_statistics_notebook.html  introduction.html  markdown_examples.html  setting_up_environment.html
book/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
book/_build/jupyter_execute/notebooks/: 1_2_setting_up_environment.ipynb  1_getting_started.ipynb  2_1_basic_terminology.ipynb  2_foundations_of_statistics.ipynb  foundations_of_statistics_notebook.ipynb  introduction.ipynb  markdown_examples.ipynb  setting_up_environment.ipynb
book/notebooks/: 1_getting_started.ipynb  2_1_basic_terminology.ipynb  2_2_descriptive_statistics.ipynb  introduction.ipynb  setting_up_environment.ipynb
dockerfiles/: Dockerfile_jupyter_book_dev  Dockerfile_stats_ds_book
notebooks/: 1_1_introduction.html  1_2_setting_up_environment.html  1_getting_started.html  2_1_basic_terminology.html  2_2_descriptive_statistics.html  2_foundations_of_statistics.html  foundations_of_statistics_notebook.html  introduction.html  markdown_examples.html  setting_up_environment.html
