[project]
name = "python-cheat-sheets-book-package"
version = "0.0.1"
description = "Package to create some cheat sheets for python study"
authors = [
    {name = "rafaelortegar"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "anyio (==4.7.0)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "async-lru (==2.0.4)",
    "attrs (==24.3.0)",
    "babel (==2.16.0)",
    "beautifulsoup4 (==4.12.3)",
    "bleach (==6.2.0)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.11)",
    "decorator (==5.1.1)",
    "defusedxml (==0.7.1)",
    "exceptiongroup (==1.2.2)",
    "executing (==2.1.0)",
    "fastjsonschema (==2.21.1)",
    "fonttools (==4.55.3)",
    "fqdn (==1.5.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "imbalanced-learn (==0.12.4)",
    "imblearn (==0.0)",
    "ipykernel (==6.29.5)",
    "ipython (==8.31.0)",
    "isoduration (==20.11.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.5)",
    "joblib (==1.4.2)",
    "json5 (==0.10.0)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "jupyter-events (==0.10.0)",
    "jupyter-lsp (==2.2.5)",
    "jupyter-server (==2.14.2)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.3.3)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "kiwisolver (==1.4.7)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.4)",
    "matplotlib-inline (==0.1.7)",
    "mistune (==3.0.2)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.4)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "notebook (==7.3.1)",
    "notebook-shim (==0.2.4)",
    "numpy (==2.2.0)",
    "overrides (==7.7.0)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.4)",
    "pexpect (==4.9.0)",
    "pillow (==11.0.0)",
    "pip (>=23.3)",
    "platformdirs (==4.3.6)",
    "prometheus-client (==0.21.1)",
    "prompt-toolkit (==3.0.48)",
    "psutil (==6.1.1)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "py4j (==0.10.9.7)",
    "pycparser (==2.22)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.0)",
    "pyspark (==3.4.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-json-logger (==3.2.0)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.2)",
    "pyzmq (==26.2.0)",
    "referencing (==0.35.1)",
    "requests (==2.32.3)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rpds-py (==0.22.3)",
    "scikit-learn (==1.6.0)",
    "scipy (==1.14.1)",
    "seaborn (==0.13.2)",
    "send2trash (==1.8.3)",
    "setuptools (>=70.0.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.6)",
    "stack-data (==0.6.3)",
    "terminado (==0.18.1)",
    "threadpoolctl (==3.5.0)",
    "tinycss2 (==1.4.0)",
    "tomli (==2.2.1)",
    "tornado (==6.4.2)",
    "traitlets (==5.14.3)",
    "types-python-dateutil (==2.9.0.20241206)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.3.0)",
    "wcwidth (==0.2.13)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "wheel (==0.45.1)",
    "accessible-pygments (==0.0.5)",
    "alabaster (==0.7.16)",
    "click (==8.1.8)",
    "docutils (==0.20.1)",
    "greenlet (==3.1.1)",
    "imagesize (==1.4.1)",
    "importlib-metadata (==8.5.0)",
    "jupyter-book (==1.0.3)",
    "jupyter-cache (==1.0.1)",
    "latexcodec (==3.0.0)",
    "linkify-it-py (==2.0.3)",
    "markdown-it-py (==3.0.0)",
    "mdit-py-plugins (==0.4.2)",
    "mdurl (==0.1.2)",
    "myst-nb (==1.1.2)",
    "myst-parser (==2.0.0)",
    "pybtex (==0.24.0)",
    "pybtex-docutils (==1.0.3)",
    "pydata-sphinx-theme (==0.16.1)",
    "snowballstemmer (==2.2.0)",
    "sphinx (==7.4.7)",
    "sphinx-book-theme (==1.1.3)",
    "sphinx-comments (==0.0.3)",
    "sphinx-copybutton (==0.5.2)",
    "sphinx-jupyterbook-latex (==1.0.0)",
    "sphinx-multitoc-numbering (==0.1.3)",
    "sphinx-thebe (==0.3.1)",
    "sphinx-togglebutton (==0.3.2)",
    "sphinx-design (==0.6.1)",
    "sphinx-external-toc (==1.0.1)",
    "sphinxcontrib-applehelp (==2.0.0)",
    "sphinxcontrib-bibtex (==2.6.3)",
    "sphinxcontrib-devhelp (==2.0.0)",
    "sphinxcontrib-htmlhelp (==2.1.0)",
    "sphinxcontrib-jsmath (==1.0.1)",
    "sphinxcontrib-qthelp (==2.0.0)",
    "sphinxcontrib-serializinghtml (==2.0.0)",
    "sqlalchemy (==2.0.37)",
    "statsmodels (==0.14.4)",
    "tabulate (==0.9.0)",
    "uc-micro-py (==1.0.3)",
    "zipp (==3.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

# [tool.poetry]
# name = "python_cheat_sheets_book_package"
# version = "0.0.1"
# description = "A Python cheat sheets project"
# authors = ["Your Name <your.email@example.com>"]

# [tool.poetry.dependencies]
# python = "^3.10"

# [tool.poetry.dev-dependencies]
# pytest = "*"

# [tool.poetry.packages]
# include = ["src"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
